Fix dropdown alignment

--- a/css/big-text.css
+++ b/css/big-text.css
@@ -591,7 +591,7 @@ fieldset.button-group:not(:last-child) {
     margin-bottom: 0;
 }
 
-input:not([type=color]):not([type=checkbox]):not([type=radio]) {
+input:not([type=color]):not([type=checkbox]):not([type=radio]):not([type=range]) {
     all: unset;
     box-sizing: border-box;
     border: 1px solid var(--grey);
@@ -640,6 +640,7 @@ input:not([type=color]):not([type=checkbox]):not([type=radio]) {
 .dropdown .trigger {
     position: relative;
     padding-right: calc(1.125em + .75em);
+    text-align: left;
 }
 
 .dropdown .trigger > * {
